opinion dynamics model

--- a/DS.ipynb
+++ b/DS.ipynb
@@ -9613,6 +9613,16 @@
     "sim=run_simulation(data,100,N,D,sigma_noise,gmm_components,1,0.1,1)\n",
     "plot_with_simulation_separate(concatenated_df,sim)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f1cd90ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sim"
+   ]
   }
  ],
  "metadata": {
